# algcurve

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  core.hpp  image.hpp  input.cpp  input.hpp  loc.py  main.cpp  paper.cpp  paper.hpp  polynomial.hpp  render.cpp  render.hpp  run.fish  thread.cpp  thread.hpp
lib/: bicorn  bifolium  bullet_nose  butterfly  cassini_oval(0.5)  cassini_oval(1)  cassini_oval(1.1)  circle_hyperbola  circle_parabola  circles  cissoid_of_diocles  conchoid_of_de_sluze(-1)  conchoid_of_de_sluze(-2)  conchoid_of_de_sluze(1)  devils_curve  fish  folium_of_descart  lemniscate_of_bernoulli  lines  lines3  rose  rose_circles  rotation  trifolium  watts_curve  witch_of_agnesi
scripts/: gen_compile_commands.py
